# rusty-records

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
benches/: bench.rs
ci/: before_deploy.sh  script.sh
examples/data/: sample.txt
src/: lib.rs  main.rs  mapper.rs  reducer.rs
