[package]
name = "rusty-records"
version = "0.2.2"
authors = ["itsdalmo <kristian@doingit.no>"]

[[bin]]
name = "mapper"
path = "src/mapper.rs"

[[bin]]
name = "reducer"
path = "src/reducer.rs"

[dependencies]
regex         = "0.1.80"
csv           = "0.14.7"
clap          = "2.19.0"
lazy_static   = "0.2.2"
